--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/dist/main.min.css">
     <title>La Réunion tourisme guide touristique.</title>
 </head>
+
 <body>
-    <div>
-    <h4>La Réunion, Guide touristique, toutes les infos pour préparer votre voyage avec Mi-aime-a-ou.com.</h4>
-    </div>
+    <header>
+        <div>
+            <h4>La Réunion, Guide touristique, toutes les infos pour préparer votre voyage avec Mi-aime-a-ou.com.</h4>
+        </div>
+    </header>
+    <main>
     <div id="Information">
         <img src="public/dist/images/la_reunion.jpg" alt="">
-    <p class="info">
-        La Réunion est une destination de rêve, avec Mi-aime-a-ou.com découvrez cette île volcanique, organisez votre séjour ou votre voyage,
-        trouvez toutes les infos pour préparer vos vacances. Réservez votre <a href="">hôtel</a>, votre <a href="">gîte ou chambre d'hôte</a>, <a href="">louez une voiture</a>, préparez vos visites.
-        Baptisée l'île intense, La Réunion offre ses lagons, ses sentiers de randonnées, ses paysages grandioses aux visiteurs, suivez le guide !
-    </p>
-    <p class="links"><a href="" class="lien-1">La Réunion Mi-aime-a-ou.com</a> :: <a href="">Rechercher une page</a></p>
+        <p class="info">
+            La Réunion est une destination de rêve, avec Mi-aime-a-ou.com découvrez cette île volcanique, organisez
+            votre séjour ou votre voyage,
+            trouvez toutes les infos pour préparer vos vacances. Réservez votre <a href="">hôtel</a>, votre <a
+                href="">gîte ou chambre d'hôte</a>, <a href="">louez une voiture</a>, préparez vos visites.
+            Baptisée l'île intense, La Réunion offre ses lagons, ses sentiers de randonnées, ses paysages grandioses aux
+            visiteurs, suivez le guide !
+        </p>
+        <p class="links"><a href="" class="lien-1">La Réunion Mi-aime-a-ou.com</a> :: <a href="">Rechercher une page</a>
+        </p>
     </div>
 
     <div class="flex">
@@ -35,17 +44,25 @@
         <div><img src="public/dist/images/reunion_13.jpg" alt=""><a href="">Religions croyances La Réunion</a></div>
         <div><img src="public/dist/images/reunion_12.jpg" alt=""><a href="">Chansons La Réunion</a></div>
         <div><img src="public/dist/images/reunion_14.jpg" alt=""><a href="">Poésies et poèmes La Réunion</a></div>
-        <p>Conformément à la loi n° 78-17 du 6 janvier 1978, vous disposez d'un droit d'accès, de modification, 
-            de rectification et de suppression des données à caractère personnel qui vous concernent en nous contactant en cliquant <a href="" class="lien-2">ici</a></p>
+        <p>Conformément à la loi n° 78-17 du 6 janvier 1978, vous disposez d'un droit d'accès, de modification,
+            de rectification et de suppression des données à caractère personnel qui vous concernent en nous contactant
+            en cliquant <a href="" class="lien-2">ici</a></p>
     </div>
-    <div>
-        <p>
-            Dernière mise à jour : Jeudi 26 Novembre 2020   Webmaster. Tous droits réservés © 2002 / 2020
-
-            Conformément à la loi n° 78-17 du 6 janvier 1978, vous disposez d'un droit d'accès, de modification,
-            de rectification et de suppression des données à caractère personnel qui vous concernent en nous contactant en cliquant <a href="" class="lien-2">ici</a>
-        </p>
-    </div>
+</main>
+    <footer>
+        <div>
+            <p class="centered">
+                Dernière mise à jour : Jeudi 26 Novembre 2020 <a href="" class="lien-2">Webmaster</a>. Tous droits
+                réservés © 2002 / 2020<br>
+            </p>
+            <p>
+                Conformément à la loi n° 78-17 du 6 janvier 1978, vous disposez d'un droit d'accès, de modification,
+                de rectification et de suppression des données à caractère personnel qui vous concernent en nous
+                contactant en cliquant <a href="" class="lien-2">ici</a>
+            </p>
+        </div>
+    </footer>
     <script async src="public/dist/main.min.js"></script>
 </body>
+
 </html>
